Fixed Bug: Chromium not showing progressbars properly
Added gradients for chromium to display progressbars properly.
Every progressbar is inheriting from the "progressbar_bar" class now to reduce the size of the stylesheet.

--- a/tpl/style.css
+++ b/tpl/style.css
@@ -167,14 +167,16 @@ input[type=button], input[type=submit] {
 
 /** ------------------------------ PROGRESS BARS ------------------------------ */
 
+.progressbar_bar		{background: linear-gradient(top, #CCCCFF, #6666AA); background: -o-linear-gradient(top, #CCCCFF, #6666AA); background: -moz-linear-gradient(top, #CCCCFF, #6666AA); background-image: -webkit-gradient(linear, left top, left bottom, from(#CCCCFF), to(#6666AA));}
+
 .bar0					{height:5px; width:74px; border:1px inset #333;}
-.bar0_bar				{height:5px; background: linear-gradient(top, #CCCCFF, #6666AA); background: -o-linear-gradient(top, #CCCCFF, #6666AA); background: -moz-linear-gradient(top, #CCCCFF, #6666AA);}
+.bar0_bar				{height:5px; background: linear-gradient(top, #CCCCFF, #6666AA); background: -o-linear-gradient(top, #CCCCFF, #6666AA); background: -moz-linear-gradient(top, #CCCCFF, #6666AA); background-image: -webkit-gradient(linear, left top, left bottom, from(#CCCCFF), to(#6666AA));}
 
 .bar1					{box-sizing:border-box; border-radius:9px; width:200px; height:20px; border:1px inset #333; display:inline-block;}
-.bar1_bar				{box-sizing:border-box; border-radius:9px; padding:0px; height:18px; border:1px outset #CCCCFF; background: linear-gradient(top, #CCCCFF, #6666AA); background: -o-linear-gradient(top, #CCCCFF, #6666AA); background: -moz-linear-gradient(top, #CCCCFF, #6666AA); text-align:center; text-shadow:1px 1px 2px #000;}
+.bar1_bar				{box-sizing:border-box; border-radius:9px; padding:0px; height:18px; border:1px outset #CCCCFF; text-align:center; text-shadow:1px 1px 2px #000;}
 
 .barDiskFree			{box-sizing:border-box; border-radius:9px; width:200px; height:16px; border:1px inset #333; display:inline-block;}
-.barDiskFree_bar		{box-sizing:border-box; border-radius:9px; padding:0px; height:14px; font-size:10px; border:1px outset #CCCCFF; background: linear-gradient(top, #CCCCFF, #6666AA); background: -o-linear-gradient(top, #CCCCFF, #6666AA); background: -moz-linear-gradient(top, #CCCCFF, #6666AA); text-align:center; text-shadow:1px 1px 2px #000;}
+.barDiskFree_bar		{box-sizing:border-box; border-radius:9px; padding:0px; height:14px; font-size:10px; border:1px outset #CCCCFF; text-align:center; text-shadow:1px 1px 2px #000;}
 
 .code					{white-space: pre; font-family:courier new; margin:1px;}
 
